Fix margins for 960 and 1180, just a patch, alignement should be fixed

--- a/stylus/page.styl
+++ b/stylus/page.styl
@@ -371,8 +371,11 @@ input[type=checkbox]
   background-color $color_bg_intro
 
   img
-    margin 7.5em 0 0 0
+    margin 12em 0 0 0
     max-width 100%
+
+    @media screen and (min-width: 1180px)
+      margin 7.5em 0 0 0
 
     @media screen and (max-width: 800px)
       margin 1em auto 0 auto
